--- a/Html/tela de login.html
+++ b/Html/tela de login.html
@@ -35,7 +35,8 @@
           </div>
 
           <button type="submit" id="cadastrar" onclick="cadastrar()">Cadastrar</button>
-
+          
+          <button type="reset" id="apagar" onclick="resetar()">Apagar</button>
         </div>
     </div>
 
