--- a/Html/tela de cadastro.html
+++ b/Html/tela de cadastro.html
@@ -37,6 +37,8 @@
           <button type="submit" id="cadastrar" onclick="cadastrar()">Cadastrar</button>
           
           <button type="reset" id="apagar" onclick="resetar()">Apagar</button>
+          
+          <p id="enca">Já tem cadastro ? <a href="tela de login.html">Faça o login</a></p>
         </div>
     </div>
 
