--- a/Html/tela de login.html
+++ b/Html/tela de login.html
@@ -23,6 +23,8 @@
             </div>
 
             <button type="submit" onclick="logar()" id="login">Logar</button>
+
+            <p id="enca">Não tem login ? <a href="tela de cadastro.html">cadastre-se</a></p>
         </div>
     </div>
 
